- implemented support for manual sorting of items in the backend (Thanks to Ueli Kunz) - fixed issue 199 - apply button not visible in the backend when no field is specified for sorting. - added resultcount for select and tag fields in ModuleCatalog::generateFilter(). - fixed an issue in ModuleCatalogList that the current page was not determined correctly.
git-svn-id: http://typolight-catalog.googlecode.com/svn@198 5f8f583f-444c-0410-842f-6b1beb028a02

--- a/src/system/modules/catalog/html/style.css
+++ b/src/system/modules/catalog/html/style.css
@@ -1,5 +1,6 @@
 /* TYPOlight catalog fields style sheet */
 .header_css_export { padding:2px 0px 3px 20px; background-image:url("export.gif"); background-position:left center; background-repeat:no-repeat; }
+.header_manualsort { padding:2px 0px 3px 20px; background-image:url("cut.gif"); background-position:left center; background-repeat:no-repeat; }
 
 .field_heading { color:#aaa; }
 .field_type img { vertical-align: middle; }
